--- a/templates/base.html
+++ b/templates/base.html
@@ -1496,13 +1496,13 @@
         <div class="container">
             {% if current_user.is_authenticated and current_user.is_owner() %}
                 <span class="navbar-brand fw-bold" style="color: #333333;">
-                    <img src="{{ url_for('static', filename='data/system/Logo.png') }}" alt="Horin Logo" height="40" class="me-2">
-                    <span class="brand-text" data-translate="homestay-booking" style="font-size: 24px;">Horin</span>
+                    <img src="{{ url_for('static', filename='data/system/Logo.png') }}" alt="Homi Logo" height="40" class="me-2">
+                    <span class="brand-text" data-translate="homestay-booking" style="font-size: 24px;">Homi</span>
                 </span>
             {% else %}
                 <a class="navbar-brand fw-bold" href="{{ url_for('home') }}" style="color: #333333;">
-                    <img src="{{ url_for('static', filename='data/system/Logo.png') }}" alt="Horin Logo" height="40" class="me-2">
-                    <span class="brand-text" data-translate="homestay-booking" style="font-size: 24px;">Horin</span>
+                    <img src="{{ url_for('static', filename='data/system/Logo.png') }}" alt="Homi Logo" height="40" class="me-2">
+                    <span class="brand-text" data-translate="homestay-booking" style="font-size: 24px;">Homi</span>
                 </a>
             {% endif %}
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
